# mdvcontainment

./: .gitignore  .readthedocs.yaml  MANIFEST.in  README.md  pyproject.toml  setup.py
docs/: requirements.txt
docs/source/: api.rst  conf.py  developer.rst  index.rst
example_notebooks/.ipynb_checkpoints/: containment_tutorial-checkpoint.ipynb  containment_tutorial_v0.1-checkpoint.ipynb
example_notebooks/2D/: box_corners.gro  containment_img.html  containment_tutorial_2D_v0.3.ipynb  island_2D.gro  island_2D.html  island_2D_-1.gro  island_2D_1.gro  island_2D_renders.html  render_command.vmd  render_outside_command.vmd
example_notebooks/3D/: complex_3D_containment.vmd  containment_selections.vmd  containment_tutorial_3D_v0.5.ipynb  island_3D_containment.vmd  nested_cylinders_3D_containment.vmd  render_command.vmd  render_outside_command.vmd  visualization.vmd
example_notebooks/MD/: bicelle_-1.gro  bicelle_1.gro  box_corners.gro  components.vmd  contaiment_tutorial_md_v0.1.ipynb  containment_img.html  render_command.vmd  (+4 more)
mdvcontainment/: __init__.py  _version.py  atomgroup_to_voxels.py  atoms_voxels_mapping.pyx  composition_logic.py  containment_main.py  find_bridges.pyx  find_label_contacts.pyx  gen_data.py  gen_data_helper.py  graph_logic.py  helper.py  label.py  label_logic.py  mda_containment.py  rank_logic.py  slow_python_functions.py  tests.py  voxel_containment.py  voxel_logic.py  voxels_to_gro.py  wrappers.py
render_commands/: render_command.vmd  render_outside_command.vmd
src/: label_logic.py  mda_containment.py
tests/: test_voxel_logic.py
(+45 files in other folders)
