[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mdvcontainment"
version = "0.0.1"
authors = [
  { name="Bart MH Bruininks", email="bartbruininks@gmail.com" },
]
dependencies = [
	"numpy",
	"networkx",
	"scipy",
	"pyvis",
	"opencv-python",
	"MDAnalysis",
	"mdvwhole",
]
description = "Robust characterization of inside and outside for point clouds in periodic spaces."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/BartBruininks/mdvcontainment"
"Bug Tracker" = "https://github.com/BartBruininks/mdvcontainment/issues"
